--- a/apps/angular-udemy/src/app/user/user.component.scss
+++ b/apps/angular-udemy/src/app/user/user.component.scss
@@ -2,6 +2,7 @@ div {
   border-radius: 12px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  margin-left: 20px;
 }
 
 button {
@@ -27,7 +28,7 @@ button:active,
 }
 
 img {
-  width: 2rem;
+  width: 60px;
   object-fit: contain;
   border-radius: 150%;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
